--- a/T365CalculatorScreens/Base.lproj/Contact.storyboard
+++ b/T365CalculatorScreens/Base.lproj/Contact.storyboard
@@ -88,14 +88,21 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HgF-Vp-LE5" userLabel="searchView">
-                                        <rect key="frame" x="10" y="10" width="580" height="55"/>
+                                        <rect key="frame" x="10" y="75" width="580" height="55"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="searchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="4OP-bI-gSs">
-                                                <rect key="frame" x="9" y="15" width="32" height="32"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="searchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="4OP-bI-gSs">
+                                                <rect key="frame" x="10" y="12" width="30" height="30"/>
                                                 <color key="backgroundColor" red="0.81960784310000001" green="0.28235294119999998" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="K1p-yq-P0P"/>
+                                                    <constraint firstAttribute="height" constant="30" id="q8a-cS-fgS"/>
+                                                </constraints>
                                             </imageView>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search by Name, Title, Address or Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nnW-vJ-evt">
-                                                <rect key="frame" x="46" y="12" width="489" height="31"/>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search by Name, Title, Address or Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nnW-vJ-evt">
+                                                <rect key="frame" x="46" y="12" width="519" height="31"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="31" id="e9g-Ra-X9d"/>
+                                                </constraints>
                                                 <color key="textColor" red="0.64313725489999995" green="0.64313725489999995" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -104,10 +111,15 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="2rf-eM-Z4q"/>
+                                            <constraint firstItem="nnW-vJ-evt" firstAttribute="centerY" secondItem="4OP-bI-gSs" secondAttribute="centerY" id="45d-iC-sMQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="nnW-vJ-evt" secondAttribute="trailing" constant="15" id="bP4-Q7-Nxa"/>
+                                            <constraint firstItem="4OP-bI-gSs" firstAttribute="leading" secondItem="HgF-Vp-LE5" secondAttribute="leading" constant="10" id="qj3-rO-UT3"/>
+                                            <constraint firstItem="4OP-bI-gSs" firstAttribute="centerY" secondItem="HgF-Vp-LE5" secondAttribute="centerY" id="qni-To-AgG"/>
+                                            <constraint firstItem="nnW-vJ-evt" firstAttribute="leading" secondItem="4OP-bI-gSs" secondAttribute="trailing" constant="6" id="v6c-fE-Ytv"/>
                                         </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wnS-QC-eNC">
-                                        <rect key="frame" x="0.0" y="85" width="600" height="515"/>
+                                        <rect key="frame" x="0.0" y="150" width="600" height="450"/>
                                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContactCell" id="Ccx-iy-TLE" customClass="ContactCell" customModule="T365CalculatorScreens" customModuleProvider="target">
@@ -124,14 +136,14 @@
                                                                 <constraint firstAttribute="height" constant="40" id="vfX-L6-Iv7"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carolyn Altonadi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CpF-qR-jky">
-                                                            <rect key="frame" x="71" y="22" width="482" height="16"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Carolyn Altonadi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CpF-qR-jky">
+                                                            <rect key="frame" x="71" y="20" width="482" height="19"/>
                                                             <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="16"/>
                                                             <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Real Estate Agent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6L-CM-REN">
-                                                            <rect key="frame" x="71" y="43.5" width="482" height="14"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Real Estate Agent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6L-CM-REN">
+                                                            <rect key="frame" x="71" y="42" width="482" height="16.5"/>
                                                             <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="14"/>
                                                             <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -192,14 +204,14 @@
                                         </connections>
                                     </tableView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="wnS-QC-eNC" secondAttribute="trailing" id="0KE-qa-yYq"/>
                                     <constraint firstItem="wnS-QC-eNC" firstAttribute="top" secondItem="HgF-Vp-LE5" secondAttribute="bottom" constant="20" id="59c-od-8lX"/>
                                     <constraint firstItem="wnS-QC-eNC" firstAttribute="leading" secondItem="AZz-mL-310" secondAttribute="leading" id="B77-Zj-9am"/>
                                     <constraint firstAttribute="trailing" secondItem="HgF-Vp-LE5" secondAttribute="trailing" constant="10" id="Ef7-VN-wDy"/>
                                     <constraint firstAttribute="bottom" secondItem="wnS-QC-eNC" secondAttribute="bottom" id="mcU-Ex-UfO"/>
-                                    <constraint firstItem="HgF-Vp-LE5" firstAttribute="top" secondItem="AZz-mL-310" secondAttribute="top" constant="10" id="o2a-Ms-gej"/>
+                                    <constraint firstItem="HgF-Vp-LE5" firstAttribute="top" secondItem="AZz-mL-310" secondAttribute="top" constant="75" id="o2a-Ms-gej"/>
                                     <constraint firstItem="HgF-Vp-LE5" firstAttribute="leading" secondItem="AZz-mL-310" secondAttribute="leading" constant="10" id="wk4-Kb-swL"/>
                                 </constraints>
                             </view>
@@ -212,13 +224,14 @@
                             <constraint firstAttribute="trailing" secondItem="AZz-mL-310" secondAttribute="trailing" id="uti-Mj-IZr"/>
                         </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="theTableView" destination="wnS-QC-eNC" id="Uy7-jI-bb7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xew-1W-a6Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="614" y="612"/>
+            <point key="canvasLocation" x="602" y="586"/>
         </scene>
     </scenes>
     <resources>
