--- a/T365CalculatorScreens/Base.lproj/Main.storyboard
+++ b/T365CalculatorScreens/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
             </objects>
             <point key="canvasLocation" x="-532" y="445"/>
         </scene>
-        <!--AccountExecutiveHomeController-->
+        <!--CreateProfileReportController-->
         <scene sceneID="DOo-Eg-dBt">
             <objects>
-                <viewControllerPlaceholder storyboardName="Home" referencedIdentifier="AccountExecutiveHomeController" id="dPP-h0-T2q" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="CreateProfileReport" referencedIdentifier="CreateProfileReportController" id="dPP-h0-T2q" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="tTL-GS-3Wb"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vIJ-bD-PhE" userLabel="First Responder" sceneMemberID="firstResponder"/>
